# pandolabo

./: .clang-format  .gitignore  CMakeLists.txt  CODE_QUALITY_ASSESSMENT.md  Doxyfile  LICENSE  README.md  conanfile.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/conan/: conanprofile_clang  conanprofile_clang_debug  conanprofile_macos  conanprofile_macos_debug  conanprofile_msvc  conanprofile_msvc_debug
docs/: CPP23_INTEGRATION_COMPLETE.md  configuration-files-guide.md  design-highlevel-proposal.md  development-environment-guide.md  error-handling-guidelines.md  quick-reference.md  reload_config.md  swapchain-recovery.md  tests-guide.md  validation-layer-classification.md  vk-result-mapping.md
examples/: CMakeLists.txt  README.md  basic_usage.cpp
examples/core/basic_compute/: README.md  basic.comp  basic_computing.cpp  basic_computing.hpp  main.cpp
examples/core/basic_cube/: README.md  basic_cube.cpp  basic_cube.hpp  cube.vert  main.cpp
examples/core/computing_image/: README.md  main.cpp  simple_image.comp  simple_image_computing.cpp  simple_image_computing.hpp  stb_image.h  stb_image_write.h
examples/core/square/: README.md  main.cpp  square.cpp  square.frag  square.hpp  square.vert
examples/core/streaming_resources/: README.md  main.cpp  streaming_resources.cpp  streaming_resources.hpp
examples/highlevel/basic_compute/: basic_compute_hl.cpp  basic_compute_hl.hpp  main.cpp
examples/highlevel/basic_cube/: basic_cube_hl.cpp  basic_cube_hl.hpp  main.cpp
examples/highlevel/computing_image/: main.cpp  simple_image_computing_hl.cpp  simple_image_computing_hl.hpp  stb_image.h  stb_image_write.h
examples/highlevel/square/: main.cpp  square_hl.cpp  square_hl.hpp
examples/highlevel/streaming_resources/: main.cpp  streaming_resources_hl.cpp  streaming_resources_hl.hpp
include/: pandolabo.hpp
include/pandora/: core.hpp  highlevel.hpp
include/pandora/core/: buffer_helpers.hpp  command_buffer.hpp  err.hpp  error.hpp  gpu.hpp  io.hpp  pipeline.hpp  rendering_structures.hpp  rendering_types.hpp  renderpass.hpp  structures.hpp  synchronization.hpp  synchronization_helpers.hpp  types.hpp  ui.hpp
include/pandora/core/err/: dispatch.hpp  error.hpp  result.hpp
include/pandora/core/gpu/: barrier.hpp  buffer.hpp  config.hpp  context.hpp  debug.hpp  descriptor.hpp  device.hpp  fence.hpp  gpu_check.hpp  image.hpp  semaphore.hpp  shader.hpp  swapchain.hpp  synchronization.hpp  validation.hpp  vk_helper.hpp
include/pandora/core/module_connection/: gpu_ui.hpp
include/pandora/highlevel/: compute_runner.hpp  error_collector.hpp  frame_context.hpp  pipeline_cache.hpp  renderer.hpp  resource_transfer.hpp  shader_library.hpp
scripts/: README.md  build.ps1  build.py  build.sh  generate_vscode_config.py
src/core/err/: dispatch.cpp
src/core/gpu/: validation.cpp  vk_result_mapping.cpp
src/pandora/core/: attachment.cpp  buffer_wrapper.cpp  command_buffer.cpp  command_driver.cpp  cpu_gpu_synchronization.cpp  framebuffer.cpp  pipeline.cpp  render_kit.cpp  renderpass.cpp  subpass.cpp  synchronization.cpp
src/pandora/core/gpu/: barrier.cpp  buffer.cpp  buffer_barrier.cpp  buffer_description.cpp  context.cpp  debug.cpp  description_unit.cpp  descriptor_set.cpp  descriptor_set_layout.cpp  device.cpp  image.cpp  image_barrier.cpp  image_description.cpp  image_view.cpp  resource_description.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  swapchain.cpp
src/pandora/core/gpu/vk_helper/: vk_helper.cpp
src/pandora/core/io/: shader.cpp
src/pandora/core/module_connection/gpu_ui/: window_surface.cpp
src/pandora/core/ui/: window.cpp
src/pandora/highlevel/: compute_runner.cpp  error_collector.cpp  pipeline_cache.cpp  renderer.cpp  resource_transfer.cpp  shader_library.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_debug_validation_mapping.cpp  test_error_dispatch.cpp  test_error_result.cpp  test_gpu_barrier_builder.cpp  test_gpu_context.cpp  test_gpu_resources.cpp  test_gpu_sync.cpp  test_gpu_windowed.cpp  test_rendering_structures.cpp  test_structures.cpp  test_validation_mapping.cpp  test_vk_helper.cpp  test_vk_result_mapping.cpp
tests/util/: test_env.hpp
